branch for Hinterland_0MQ1x debugging code